# hgnc

./: .bumpversion.cfg  .coveragerc  .flake8  .gitignore  .readthedocs.yml  .travis.yml  Dockerfile  MANIFEST.in  README.md  README.rst  docker-compose.yml  requirements.txt  setup.cfg  setup.py  tox.ini
docs/: Makefile
docs/source/: conf.py  enrich.rst  index.rst  manager.rst
src/bio2bel_hgnc/: __init__.py  __main__.py  cli.py  constants.py  enrich.py  gfam_manager.py  integrate.py  manager.py  model_utils.py  models.py  to_bel.py  to_belns.py  utils.py  version.py  web.py  wrapper.py
tests/: __init__.py  cases.py  constants.py  test_enrich_metadata.py
tests/resources/: hgnc_test.json
