##########################
# Setup.py Configuration #
##########################
[metadata]
name = bio2bel_hgnc
version = 0.3.1-dev
description = A package for converting HGNC and HGNC Gene Families to BEL
long_description = file: README.rst

# URLs associated with the project
url = https://github.com/bio2bel/hgnc
download_url = https://github.com/bio2bel/hgnc/releases
project_urls =
    Bug Tracker = https://github.com/bio2bel/hgnc/issues
    Source Code = https://github.com/bio2bel/hgnc

# Author information
author = Charles Tapley Hoyt
author_email = cthoyt@gmail.com
maintainer = Charles Tapley Hoyt
maintainer_email = cthoyt@gmail.com

# License Information
license = MIT
license_file = LICENSE

# Search tags
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering :: Bio-Informatics
keywords =
    Biological Expression Language
    BEL
    Systems Biology
    Gene Ontology

[options]
install_requires =
    networkx
    pybel>=0.14.0,<0.15.0
    click
    bio2bel>=0.3.3
    pyobo>=0.1.0
    tqdm
    sqlalchemy
    protmapper

# Random options
zip_safe = false
include_package_data = True
python_requires = >=3.7

# Where is my code
packages = find:
package_dir =
    = src

[options.packages.find]
where = src

[options.extras_require]
docs =
    sphinx
    sphinx-rtd-theme
    sphinx-click
    sphinx-autodoc-typehints

[options.entry_points]
bio2bel =
    hgnc = bio2bel_hgnc
    hgncgenefamily = bio2bel_hgnc.gfam_manager
compath =
    hgnc = bio2bel_hgnc
console_scripts =
    bio2bel_hgnc = bio2bel_hgnc.cli:main
    bio2bel_hgncgenefamily = bio2bel_hgnc.gfam_manager:main

######################
# Doc8 Configuration #
# (doc8.ini)         #
######################
[doc8]
max-line-length = 120

##########################
# Coverage Configuration #
# (.coveragerc)          #
##########################
[coverage:run]
branch = True
source = bio2bel_hgnc
omit =
    tests/*
    docs/*

[coverage:paths]
source =
    src/bio2bel_hgnc
    .tox/*/lib/python*/site-packages/bio2bel_hgnc

[coverage:report]
show_missing = True
exclude_lines =
    def __str__
    def __repr__
